[package]
name = "react_compiler_e2e_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "react-compiler-e2e"
path = "src/main.rs"

[dependencies]
react_compiler = { path = "../react_compiler" }
react_compiler_ast = { path = "../react_compiler_ast" }
react_compiler_swc = { path = "../react_compiler_swc" }
react_compiler_oxc = { path = "../react_compiler_oxc" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
swc_ecma_parser = "35"
swc_ecma_ast = "21"
swc_common = "19"
oxc_parser = "0.121"
oxc_allocator = "0.121"
oxc_span = "0.121"
oxc_semantic = "0.121"
oxc_codegen = "0.121"
