[package]
name = "react_compiler_swc"
version = "0.1.0"
edition = "2024"

[dependencies]
react_compiler_ast = { path = "../react_compiler_ast" }
react_compiler = { path = "../react_compiler" }
react_compiler_diagnostics = { path = "../react_compiler_diagnostics" }
react_compiler_hir = { path = "../react_compiler_hir" }
swc_ecma_ast = "21"
swc_ecma_visit = "21"
swc_common = "19"
swc_ecma_parser = "35"
swc_ecma_codegen = "24"
swc_atoms = "9"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
