[package]
name = "react_fixtures"
version = "0.1.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
insta = { workspace = true }
react_estree = { workspace = true }
react_hermes_parser = { workspace = true }
react_hir = { workspace = true }
react_optimization = { workspace = true }
react_semantic_analysis = { workspace = true }
react_ssa = { workspace = true }
react_build_hir = { workspace = true }
miette = { workspace = true, features = ["backtrace", "fancy"] }
