[package]
name = "react_napi"
version = "0.1.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

[lib]
crate-type = ["cdylib"]

[dependencies]
react_diagnostics = { workspace = true }
react_hermes_parser = { workspace = true }
react_estree = { workspace = true }
react_semantic_analysis = { workspace = true }
napi        = { version = "2.13.3", features = ["serde-json", "async"] }
napi-derive = { version = "2.12" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"