[package]
name = "estree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3.13.0", features = ["boxed", "collections"] }
elsa = "1.8.1"
insta = { version = "1.30.0", features = ["glob"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
static_assertions = "1.1.0"

[build-dependencies]
estree-codegen = { path = "../estree-codegen" }