[package]
name = "forget_fixtures"
version = "0.1.0"
publish               = false
authors.workspace     = true
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
repository.workspace  = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
insta = { workspace = true }
forget_estree = { workspace = true }
forget_hermes_parser = { workspace = true }
forget_hir = { workspace = true }
forget_optimization = { workspace = true }
forget_semantic_analysis = { workspace = true }
forget_ssa = { workspace = true }
forget_build_hir = { workspace = true }
miette = { workspace = true, features = ["backtrace", "fancy"] }
